--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "d3-ease": "^2.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-move": "^6.4.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
