--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "me.pegasis.site-react",
+  "type": "module",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,7 +14,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "npm run sitemap && GENERATE_SOURCEMAP=false react-scripts build",
+    "sitemap": "node src/genSiteMap.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
